Добавлен Eureka Server и в нём зарегистрированы клиенты

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <modules>
         <module>BookStorageService</module>
         <module>BookTrackerService</module>
+        <module>EurekaService</module>
     </modules>
 
     <dependencyManagement>
