--- a/BookStorageService/src/main/resources/application.properties
+++ b/BookStorageService/src/main/resources/application.properties
@@ -1,7 +1,4 @@
 spring.application.name=BookStorageService
-server.port=8080
-
-spring.main.allow-bean-definition-overriding=true
 
 spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
@@ -14,16 +11,16 @@ spring.datasource.password=12345678
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-# ?????????? ??????????????? ???????? ?????, ???? ??????????? Flyway
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-# ???????? ????? ?? ?????????
 spring.jpa.properties.hibernate.default_schema=book_schema
 
-springdoc.api-docs.path=/v3/api-docs
-springdoc.swagger-ui.path=/swagger-ui.html
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+
+server.port=0
 
 spring.messages.basename=messages
 
