Исправлено "общение" между микросервисами с помощью RabbitMQ и добавлена маршрутизация

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
         <module>BookStorageService</module>
         <module>BookTrackerService</module>
         <module>EurekaService</module>
+        <module>APIGateway</module>
     </modules>
 
     <dependencyManagement>
